[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "wryview"
authors = [
  { name="校溯", email="xiaosu@xiaosu.icu" }
]
description = "Comprehensive Python binding for wry — cross-platform embeddable webview, no event loop required."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.9"
license = "MPL-2.0"
license-files = ["LICENSE"]
keywords = ["wry", "webview", "webview2", "webkit", "embed", "gui", "desktop", "pyo3"]
classifiers = [
    # Development Status
    "Development Status :: 2 - Pre-Alpha",

    # Supported Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    # Operating System
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",

    # Intended Audience & Topic
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",

    # Rust
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/xiaosuawa/wryview"
Repository = "https://github.com/xiaosuawa/wryview"
Issues = "https://github.com/xiaosuawa/wryview/issues"

[tool.maturin]
python-source = "python"
module-name = "wryview._core"
features = ["pyo3/extension-module"]
